[project]
name = "freightsentry-riskd"
version = "0.1.0"
description = "Real-time fraud detection SaaS for freight aggregation platforms"
requires-python = ">=3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "maxminddb>=2.6",
    "ip2proxy>=3.4",
    "pytricia>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "hypothesis>=6.115",
]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]
load = [
    "locust>=2.32",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pyflakes + pycodestyle
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = [
    "E501",             # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # asserts and hardcoded secrets are OK in tests
"alembic/versions/*.py" = ["N999"]  # alembic auto-generates non-PEP-8 module names

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytricia", "ip2proxy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
